adds rules; adds http put and delete
